Metriken/nginxexporter/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: haha
