Metriken/nginxexporter/nginxwithexporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxwithexporter
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: nginxwithexporter
  template:
    metadata:
      name: nginxwithexporter
      labels:
        app: nginxwithexporter
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: nginxconf
          mountPath: /etc/nginx/conf.d
      - name: exporter
        image: nginx/nginx-prometheus-exporter:0.10.0 
        args:  ["-nginx.scrape-uri=http://localhost/stub_status"]
        ports:
        - name: metrics
          containerPort: 9113
      volumes:
      - name: nginxconf
        configMap:
          name: defaulconf
