Metriken/nginxexporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxwithexporter
spec:
  ports:
  - port:     80
  selector:
    app: nginxwithexporter

---
