Metriken/nginxexporter/ingress.yaml
# Ab K8s 1.19
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: windhoff
spec:
  rules:
  - host: windhoff.erkan.linsenraum.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: nginxwithexporter
            port:
              number: 80
